@@ -1,4 +1,4 @@
-There is a place we can go. 
+The linebacker gave the quarterback a push.
 END.
 where is the ball?
 The ball is under the couch.
