@@ -15,6 +15,7 @@ New in version 1.1.1 (xxx?? 2009)
  * remove % from _%quantity relation name.
  * Remove garbage generated for certain prepositional sentences.
  * Remove garbage generated for certain questions, e.g. "Where is the ball?"
+ * Fix cases where direct, indirect object reversed.
 
 New in version 1.1.0 (2 July 2009)
  * Fix crash when generating scheme frames for opencog.
